Adding employee image service methods